fixed navigationt text wrapping on two lines

--- a/src/components/navigation/navigationItems/styles.css
+++ b/src/components/navigation/navigationItems/styles.css
@@ -6,4 +6,9 @@
   justify-content: space-around;
   color: #fff;
   font-size: 25px;
+  white-space: nowrap;
+}
+
+.NavigationItems li {
+  display: inline-block;
 }
